{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 29,
  "lineage": "5c44df78-31f7-6858-7796-9c83d1b00af7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953590800480:internet-gateway/igw-0e23e9a630ddf8b04",
            "id": "igw-0e23e9a630ddf8b04",
            "owner_id": "953590800480",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-057e5df9cfb540d37"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953590800480:route-table/rtb-08d53b6a0ea109bba",
            "id": "rtb-08d53b6a0ea109bba",
            "owner_id": "953590800480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e23e9a630ddf8b04",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-057e5df9cfb540d37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d257b355480861e6",
            "route_table_id": "rtb-08d53b6a0ea109bba",
            "subnet_id": "subnet-04901fa7b678bb42c"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_rtb",
            "aws_subnet.new_subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a441ed3528baab6",
            "route_table_id": "rtb-08d53b6a0ea109bba",
            "subnet_id": "subnet-04b77f28e7f8ef704"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.new_rtb",
            "aws_subnet.new_subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953590800480:security-group/sg-07bda06cee061ef8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bda06cee061ef8d",
            "ingress": [],
            "name": "terraform-20230424234218279900000001",
            "name_prefix": "terraform-",
            "owner_id": "953590800480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-057e5df9cfb540d37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953590800480:subnet/subnet-04901fa7b678bb42c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04901fa7b678bb42c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953590800480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-057e5df9cfb540d37"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953590800480:subnet/subnet-04b77f28e7f8ef704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b77f28e7f8ef704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953590800480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-2"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-2"
            },
            "vpc_id": "vpc-057e5df9cfb540d37"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:953590800480:vpc/vpc-057e5df9cfb540d37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca12ed16ba839792",
            "default_route_table_id": "rtb-013c691e5a9a2dfcc",
            "default_security_group_id": "sg-0acc98f178af251f7",
            "dhcp_options_id": "dopt-05899306206236034",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057e5df9cfb540d37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013c691e5a9a2dfcc",
            "owner_id": "953590800480",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}